--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,19 @@ img {
 
 /*hero*/
 .hero {
+  max-width: 1440px;
+  height: 600px;
+  margin: 0 auto;
+
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/bgimg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
   background-color: var(--color-general);
   text-align: center;
   padding-top: 188px;
@@ -208,6 +221,20 @@ img {
 .benefits-item {
   flex-basis: calc((100% - 72px) / 4);
 }
+
+/*.benefits-item*/
+
+.icon-container {
+  display: flex;
+  height: 112px;
+  background-color: var(--accent-color);
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+
+  margin-bottom: 8px;
+}
+
 /*services*/
 
 .services-item {
@@ -233,6 +260,61 @@ img {
   padding-bottom: 32px;
 }
 
+/*icon*/
+.socials-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+  margin-top: 8px;
+}
+.social-item {
+  height: 40px;
+  width: 40px;
+}
+.social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: var(--title-text-color);
+  background-color: var(--button-color);
+  border-radius: 50%;
+}
+.social-link:hover,
+.social-link:focus {
+  background-color: var(--btn-color-herro-hover);
+}
+.icon-social {
+  fill: currentColor;
+}
+
+/*company*/
+
+.company {
+  width: 168px;
+  height: 88px;
+  flex-basis: calc((100% - 120px) / 6);
+}
+
+.company-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: #8e8f99;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+}
+.company-icon {
+  fill: currentColor;
+}
+.company-link:hover {
+  color: var(--btn-color-herro-hover);
+  border: 1px solid var(--btn-color-herro-hover);
+}
+
 /*portfolio*/
 
 .section.portfolio {
@@ -245,6 +327,7 @@ img {
   justify-content: center;
 }
 .portfolio-btn {
+  border-radius: 4px;
   display: inline-block;
   border-radius: 4px;
   padding: 12px 24px;
@@ -265,6 +348,8 @@ img {
 .portfolio-btn:focus {
   color: var(--accent-color);
   background-color: var(--button-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-items {
@@ -274,6 +359,9 @@ img {
 }
 .portfolio-panel {
   flex-basis: calc((100% - 48px) / 3);
+}
+.portfolio-link:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-card {
@@ -285,14 +373,22 @@ img {
   border-bottom: 1px solid var(--button-hover-color);
 }
 
+.portfolio-link {
+  display: block;
+  text-decoration: none;
+}
+.section-subtitle.portfolio {
+  color: var(--color-general);
+}
+
 /*footer*/
-.footer {
+.footer-page {
   padding-top: 100px;
   padding-bottom: 100px;
   background-color: var(--color-general);
 }
 
-.footer .logo {
+.footer-page .logo {
   margin-bottom: 16px;
 }
 .footer-logo-color {
@@ -302,4 +398,48 @@ img {
   color: var(--accent-color);
   margin-top: 0;
   max-width: 264px;
+}
+.subtitle-footer {
+  /*-webkit-text-stroke: 1px #000000;*/
+  color: var(--title-text-color);
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+}
+.container.footer {
+  display: flex;
+  align-items: flex-start;
+  gap: 120px;
+}
+
+.socials-footer {
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+}
+
+.social-item-footer {
+  height: 40px;
+  width: 40px;
+}
+
+.social-link-footer {
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.1);
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: var(--title-text-color);
+  border-radius: 50%;
+}
+
+.icon-social-footer {
+  fill: currentColor;
+}
+
+.social-link-footer:hover,
+.social-link-footer:focus {
+  background-color: #31d0aa;
 }
